--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@ body {
 	background-color: #f2f2f2;
 }
 
+
+a {
+	text-decoration: none;
+	color: black;
+}
+
+a:visited {
+	color: black;
+}
+
 main {
 	width: 350px;
 	margin: 0 auto;
