added media query to move nav below h1 when screen is small

--- a/style.css
+++ b/style.css
@@ -127,3 +127,15 @@ nav li {
 	background-color: white;
 	color: black;
 }
+
+@media screen and (max-width: 1175px) {
+	header h1 {
+		display: block;
+		margin: auto;
+	}
+
+	nav {
+		display: block;
+		margin: auto;
+	}
+}
