--- a/style.css
+++ b/style.css
@@ -146,6 +146,13 @@ nav li {
 }
 
 @media screen and (max-width: 835px) {
+	#page {
+		display: block;
+		width: 100%;
+		border-radius: 0px;
+		border-width: 1px 0px 1px 0px;
+		padding: 30px 0px 30px 0px;
+	}
 	nav li {
 		display: block;
 		width: 100%;
@@ -161,5 +168,27 @@ nav li {
 
 	p {
 		font-size: 15px;
+		padding: 0px 15px 0px 15px;
+
+	}
+}
+
+@media screen and (max-width: 560px) {
+	#index-main h1{
+		
+		margin-left: 0px;
+		margin-right: 0px;
+		width: 70%;
+		margin: auto;
+	}
+
+	#index-main {
+		display: block;
+		width: 100%;
+		margin: 75px auto;
+		padding-left: 0px;
+		padding-right: 0px;
+		border-radius: 0px;
+		border-width: 1px 0px 1px 0px;
 	}
 }
