--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@ a:visited {
 
 #index-main {
 	width: 450px;
-	margin: 0 auto;
-	margin-top: 150px;
+	margin: 150px auto;
 	background-color: white;
 	border: 1px solid #257FC4;
 	border-radius: 5px;
@@ -63,7 +62,7 @@ li:hover {
 	color: grey;
 	text-align: center;
 	font-size: 13px;
-	margin: 0px 60px 0px 60px;
+	margin: auto;
 	border-top: solid 1px #257FC4;
 }
 
