--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ a:visited {
 	color: #257FC4;
 	font-weight: 200;
 	border-bottom: solid 1px #257FC4;
-	margin: 0px 60px 0px 60px;
+	margin: auto;
+	width: 300px;
 }
 
 #links {
@@ -62,8 +63,9 @@ li:hover {
 	color: grey;
 	text-align: center;
 	font-size: 13px;
-	margin: auto;
+	margin: 15px auto;
 	border-top: solid 1px #257FC4;
+	width: 300px;
 }
 
 header {
@@ -127,6 +129,11 @@ nav li {
 	color: black;
 }
 
+p {
+	width: 90%;
+	margin: auto;
+}
+
 @media screen and (max-width: 1175px) {
 	header h1 {
 		display: block;
@@ -167,7 +174,6 @@ nav li {
 
 	p {
 		font-size: 15px;
-		padding: 0px 15px 0px 15px;
 
 	}
 }
@@ -177,7 +183,6 @@ nav li {
 		
 		margin-left: 0px;
 		margin-right: 0px;
-		width: 70%;
 		margin: auto;
 	}
 
