--- a/style.css
+++ b/style.css
@@ -44,14 +44,13 @@ a:visited {
 	text-align: center;
 	padding: 0px;
 	font-weight: 100;
-	margin: 0px;
-	margin-bottom: 10px;
+	margin: -1px 0px -1px 0px;
 }
 
 #links li {
 	/*background-color: lightgrey;*/
 	/*border-bottom: 1px solid black;*/
-	padding-top: 10px;
+	padding: 10px 0px 10px 0px;
 }
 
 li:hover {
@@ -63,7 +62,7 @@ li:hover {
 	color: grey;
 	text-align: center;
 	font-size: 13px;
-	margin: 15px auto 0px auto;
+	margin: 0px auto 0px auto;
 	border-top: solid 1px #257FC4;
 	width: 300px;
 	padding-top: 10px;
