--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 	background-color: #f2f2f2;
 	font-family: Futura;
 	margin: 0px;
+	animation: opac 0.25s;
 }
 
 @keyframes opac {
@@ -24,9 +25,9 @@ a:visited {
 	color: black;
 }
 
-main {
+/*main {
 	animation: opac 0.5s;
-}
+}*/
 
 #index-main {
 	width: 450px;
@@ -35,7 +36,8 @@ main {
 	border: 1px solid #257FC4;
 	border-radius: 5px;
 	/*box-shadow: 5px 5px 5px #767676;*/
-	padding: 100px 55px 70px 55px;
+	padding: 80px 55px 70px 55px;
+	box-shadow: 0px 0px 20px darkgrey;
 }
 
 #index-main h1 {
@@ -90,7 +92,7 @@ header h1{
 	width: 335px;
 	text-align: center;
 	height: 100%;
-	animation: opac 0.5s;
+/*	animation: opac 0.5s;*/
 }
 
 nav {
@@ -123,6 +125,7 @@ nav li {
 	padding: 50px 55px 0px 55px;
 	text-align: center;
 	max-width: 800px;
+	box-shadow: 0px 0px 20px darkgrey;
 }
 
 #page h2 {
