--- a/style.css
+++ b/style.css
@@ -35,9 +35,8 @@ a:visited {
 	background-color: white;
 	border: 1px solid #257FC4;
 	border-radius: 5px;
-	/*box-shadow: 5px 5px 5px #767676;*/
 	padding: 80px 55px 70px 55px;
-	box-shadow: 0px 0px 20px darkgrey;
+	box-shadow: 0px 0px 20px #257FC4;
 }
 
 #index-main h1 {
@@ -125,11 +124,10 @@ nav li {
 	background-color: white;
 	border: 1px solid #257FC4;
 	border-radius: 5px;
-	/*box-shadow: 5px 5px 5px #767676;*/
 	padding: 50px 55px 0px 55px;
 	text-align: center;
 	max-width: 800px;
-	box-shadow: 0px 0px 20px darkgrey;
+	box-shadow: 0px 0px 20px #257FC4;
 }
 
 #page h2 {
