--- a/style.css
+++ b/style.css
@@ -85,6 +85,8 @@ header {
 	background-color: white;
 	border-bottom: 1px solid #257FC4;
 	padding-left: 50px;
+	box-shadow: 0px 0px 20px #257FC4;
+
 }
 
 header h1{
